<resources>
    <string name="app_name" translatable="false">SC 3rd</string>
    <string name="text_title">Title</string>
    <string name="text_text">(Optional,MarkDown)</string>
    <string name="text_send">Send</string>
    <string name="text_setting">Setting</string>
    <string name="text_singleLine">Single line text</string>
    <string name="text_multiLineText">Multi-line text</string>
    <string name="text_sendByGET">Send by GET</string>
    <string name="text_sendByPOST">Send by POST</string>
    <string name="error_noMultiByGet">You cannot send Mulit-line texts by GET</string>
    <string name="error_noEnterKey">Please enter your SCKEY</string>
    <string name="text_save">Save</string>
    <string name="text_finish">Finish</string>
    <string name="text_about">"About "</string>
    <string name="text_error">Error</string>
    <string name="text_serverChan">Server Chan</string>
    <string name="text_thisApp">this app</string>
    <string name="text_aboutThisApp">This is a third-party application that use Server Chan API to push message to WeChat, the author is zhihaofans,and it\'s not the Server Chan(https://sc.ftqq.com) official APP. I guarantee it will not upload your SCKEY at any time, SCKEY will only be saved locally. If you do not believe it，you can download the Source code on Github. thank you for your use.</string>
    <string name="text_sourceCode">Source code</string>
    <string name="text_bugs">Bugs?</string>
    <string name="text_share2serverChan">Share to Server Chan</string>
    <string name="text_shareFrom">"Share from "</string>
    <string name="text_iconSource">Icon source</string>
    <string name="url_iconSource" translatable="false">https://romannurik.github.io/AndroidAssetStudio/</string>
</resources>
