<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhihaofans.server_chan_3rd_party.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_title"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/et_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_text"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/b_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_send" />

        <Button
            android:id="@+id/b_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_setting" />

        <Button
            android:id="@+id/b_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_about" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
